@@ -139,20 +139,14 @@ if ($action == "choose" && $paramok) {
 	print "<tr><td class=\"descriptionbox\">";
 	
 	if ($linkto == "person") {
-		if (file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
-			echo "Add more links:";
-		} else{
-			print $pgv_lang["enter_pid"]."</td>";
-		}
+		// print $pgv_lang["enter_pid"]."</td>";
+		echo "Add more links:";
 		print "<td class=\"optionbox wrap\">";
-		
-		// GEDFact assistant Add Media Links =======================
-		if (file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
-			echo "First, enter a Base individual ID<br />";
-		}
+		echo "A)&nbsp;&nbsp;";
 		if ($linktoid=="") {
 			print "<input class=\"pedigree_form\" type=\"text\" name=\"linktoid\" id=\"linktopid\" size=\"3\" value=\"$linktoid\" />";
 			print_findindi_link("linktopid","");
+		echo "&nbsp;&nbsp;".$pgv_lang["enter_pid"];
 		} else {
 			$record=Person::getInstance($linktoid);
 			echo '<b>', PrintReady($record->getFullName()), '</b>&nbsp;&nbsp;&nbsp;';
@@ -160,23 +154,16 @@ if ($action == "choose" && $paramok) {
 			print "(".$linktoid.")";
 			if ($TEXT_DIRECTION=="rtl") print getRLM();
 		}
-		
-		// GEDFact assistant Add Media Links =======================
-		if (file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
-			echo "<br /><br />";
-			echo "Then, click Add to add more Individual Links";
-			echo "<br />";
-		}
-		
+		echo "<br /><br />";
 		// GEDFact assistant Add Media Links =======================
 		if (file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
 			include ('modules/GEDFact_assistant/MEDIA/media_query_2a.php');
 			echo "</td></tr>";
 			echo "<tr><td class=\"topbottombar\" colspan=\"2\">";
-			echo "<input type=\"submit\" value=\"".$pgv_lang["set_link"]."s\" onclick=\"javascript:alert('Clicking \'Set Links\' will eventually parse and save the Current and Added Links, for now only the \'Base\' id will be saved');\" />";
+			echo "<input type=\"button\" value=\"".$pgv_lang["set_link"]."s\" onclick=\"javascript:alert('Clicking \'Set Links\' will eventually parse and save the Current and Added Links');\" />";
 			echo "</td></tr>";
-		} else {
-			print "<tr><td class=\"topbottombar\" colspan=\"2\"><input type=\"submit\" value=\"".$pgv_lang["set_link"]."\" /></td></tr>";
+		}else{
+		print "<tr><td class=\"topbottombar\" colspan=\"2\"><input type=\"submit\" value=\"".$pgv_lang["set_link"]."\" /></td></tr>";
 		}
 
 	}
